Navbar collapse fixed

--- a/portfolio/src/app/site/header/header.component.css
+++ b/portfolio/src/app/site/header/header.component.css
@@ -53,4 +53,7 @@
     #header-nav .navbar-brand h6{
         display: none;
     }
+    .nav-social-icon{
+        display: none;
+    }
 }
